# calculator

./: .gitignore  README.md  bump_version.py  pyproject.toml
.github/workflows/: check-and-deploy.yml  check.yml
calculator/: __init__.py
calculator/ui/: cli.py  gui.py
tests/: test_gui.py  test_model.py
