[tool.poetry]
name = "unibo-dtm-se-calculator"
packages = [
    { include = "calculator" },
]
version = "0.5.0"
description = "A simple calculator toolkit written in Python, with several UIs. It is part of the Software Engineering course at the University of Bologna."
authors = ["Giovanni Ciatto <giovanni.ciatto@unibo.it>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.10.0, < 4.0.0"
Kivy = "^2.3.0"

[tool.poetry.group.dev.dependencies]
poetry = "^2.3.1"
pytest = "^8.1.0"
coverage = "^7.4.0"
mypy = "^1.9.0"
gitpython = "^3.1.43"
poethepoet = "^0.44.0"

[tool.poe.tasks]
run-gui.script = "calculator.ui.gui:start_app"
run-cli.script = "calculator.ui.cli:start_app"
compile = "python -m compileall calculator tests"
test = "python -m unittest discover -v -s tests/"
test-coverage.shell = "coverage run -m unittest discover -v -s tests/ && coverage report -m"
lint = "mypy calculator/ tests/"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
